fau theme setup bootstrap helper :)=

--- a/templates/project/fau-themes.scss
+++ b/templates/project/fau-themes.scss
@@ -14,8 +14,8 @@ and open the template in the editor.
 @import "../../assets/stylesheets/bootstrap/mixins";
 
 // Reset and dependencies
-@import "../../assets/stylesheets/bootstrap/normalize";
-@import "../../assets/stylesheets/bootstrap/print";
+// @import "../../assets/stylesheets/bootstrap/normalize";
+// @import "../../assets/stylesheets/bootstrap/print";
 // @import "../../assets/stylesheets/bootstrap/glyphicons";
 
 // Core CSS
@@ -23,8 +23,8 @@ and open the template in the editor.
 // @import "../../assets/stylesheets/bootstrap/type";
 // @import "../../assets/stylesheets/bootstrap/code";
 @import "../../assets/stylesheets/bootstrap/grid";
-@import "../../assets/stylesheets/bootstrap/tables";
-@import "../../assets/stylesheets/bootstrap/forms";
+// @import "../../assets/stylesheets/bootstrap/tables";
+// @import "../../assets/stylesheets/bootstrap/forms";
 // @import "../../assets/stylesheets/bootstrap/buttons";
 
 // Components
